# OpenGL_playground

./: .gitignore  CMakeLists.txt  README.md
src/0_common/: OGLConstants.hpp
src/0_common/shader/: GLSLShader.hpp
src/1_hello/: OGLConstants.hpp  main.cpp
src/2_triangle/: main.cpp
src/2_triangle/shader/: GLSLShader.cpp  GLSLShader.hpp
src/2_triangle/shaders/: shader.frag  shader.vert
src/5_sdl_hello/: cleanup.hpp  main.cpp
